fixed mobile title/descript. alignment

--- a/app/parallax.css
+++ b/app/parallax.css
@@ -575,7 +575,7 @@
         margin-top: 50px;
     }
     #desc-me { /* Description about me */
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         width: 80%;
         z-index:20;
         margin: 0 0 112px 45px;
@@ -625,13 +625,13 @@
         transform: none; /* Reset transform for smaller screens */
     }
     #titleR .box-content { /* Title Right*/
-        margin-top: -150px;
+        margin-top: -250px;
         transform: none; /* Reset transform for smaller screens */
         text-align: center;
         font-size: small;
     }
     #ui-title {
-        margin-top: -25px;
+        margin-top: -80px;
     }
     #edu-title {
         margin-top: 100px;
@@ -643,23 +643,23 @@
         font-size: small;
     }
     #mobile-desc1 { /* Full Stack description */
-        font-size: 0.8rem;
+        font-size: 0.72rem;
         text-align: center;
-        transform: translate(1%, -10%);
+        transform: translate(1%, -50%);
         white-space: wrap;
         line-height: 1.6;
     }
     #mobile-desc2 { /* UI description */
-        font-size: 0.8rem;
+        font-size: 0.72rem;
         text-align: center;
         transform: translate(1%, 0%);
         white-space: wrap;
         line-height: 1.6;
     }
     #mobile-desc3 { /* Edu description */
-        font-size: 0.8rem;
+        font-size: 0.72rem;
         text-align: center;
-        transform: translate(1%, -30%);
+        transform: translate(1%, -120%);
         white-space: wrap;
         line-height: 1.6;
     }
@@ -756,24 +756,28 @@
         display: block;
     }
     #mobile-desc44 { /* miggy description */
+        font-size: 0.8rem;
         text-align: center;
         transform: translate(1%, -50px);
         white-space: wrap;
         line-height: 1.6;
     }
     #mobile-desc55 { /* python description */
+        font-size: 0.8rem;
         text-align: center;
         transform: translate(1%, -240px);
         white-space: wrap;
         line-height: 1.6;
     }
     #mobile-desc66 { /* little nightmares description */
+        font-size: 0.8rem;
         text-align: center;
         transform: translate(1%, -485px);
         white-space: wrap;
         line-height: 1.6;
     }
     #mobile-desc77 { /* last project description */
+        font-size: 0.8rem;
         text-align: center;
         transform: translate(1%, -680px);
         white-space: wrap;
